--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Appnotes
 cover: 'assets/images/cover1.jpg'
 class: 'home-template'
 navigation: True
-logo: 'assets/images/ghost.png'
+logo: 'assets/images/appnotes.png'
 current: home
 ---
 <!-- < default -->
