Updating to enriquegn/appnotes@640aa0a221131b791922fa95b0218e7e33673db9.

--- a/about/index.html
+++ b/about/index.html
@@ -7,7 +7,7 @@
 
     <!-- [[! Page Meta ]] -->
     <title>About</title>
-    <meta name="description" content="Appnotes - Application Notes and Technical Articles." />
+    <meta name="description" content="Appnotes - Application Notes and Technical Articles" />
 
     <meta name="HandheldFriendly" content="True" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -34,13 +34,13 @@
     <meta property="og:site_name" content="Appnotes" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Appnotes" />
-    <meta property="og:description" content="Application Notes and Technical Articles." />
+    <meta property="og:description" content="Application Notes and Technical Articles" />
     <meta property="og:url" content="/" />
     <meta property="og:image" content="/assets/images/cover1.jpg" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Appnotes" />
-    <meta name="twitter:description" content="Application Notes and Technical Articles." />
+    <meta name="twitter:description" content="Application Notes and Technical Articles" />
     <meta name="twitter:url" content="/" />
     <meta name="twitter:image:src" content="/assets/images/cover1.jpg" />
 
@@ -51,7 +51,7 @@
     "publisher": "Appnotes",
     "url": "/",
     "image": "/assets/images/cover1.jpg",
-    "description": "Application Notes and Technical Articles."
+    "description": "Application Notes and Technical Articles"
 }
     </script>
 
@@ -139,5 +139,24 @@
 	    ga('send', 'pageview');
 
      </script>
+    <!-- Begin Jekyll SEO tag v1.3.2 -->
+<title>About - Appnotes</title>
+<meta property="og:title" content="About" />
+<meta name="description" content="Application Notes and Technical Articles" />
+<meta property="og:description" content="Application Notes and Technical Articles" />
+<link rel="canonical" href="http://appnotes.tk///about/" />
+<meta property="og:url" content="http://appnotes.tk///about/" />
+<meta property="og:site_name" content="Appnotes" />
+<script type="application/ld+json">
+  {
+    "@context": "http://schema.org",
+    "@type": "WebSite",
+    "name": "Appnotes",
+    "headline": "About",
+    "description": "Application Notes and Technical Articles",
+    "url": "http://appnotes.tk///about/"
+  }
+</script>
+<!-- End Jekyll SEO tag -->
 </body>
 </html>
