--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <!-- [[! Page Meta ]] -->
     <title>Appnotes</title>
-    <meta name="description" content="Appnotes - Application Notes and Technical Articles." />
+    <meta name="description" content="Appnotes - Application Notes and Technical Articles" />
 
     <meta name="HandheldFriendly" content="True" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -34,13 +34,13 @@
     <meta property="og:site_name" content="Appnotes" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Appnotes" />
-    <meta property="og:description" content="Application Notes and Technical Articles." />
+    <meta property="og:description" content="Application Notes and Technical Articles" />
     <meta property="og:url" content="/" />
     <meta property="og:image" content="/assets/images/cover1.jpg" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Appnotes" />
-    <meta name="twitter:description" content="Application Notes and Technical Articles." />
+    <meta name="twitter:description" content="Application Notes and Technical Articles" />
     <meta name="twitter:url" content="/" />
     <meta name="twitter:image:src" content="/assets/images/cover1.jpg" />
 
@@ -51,7 +51,7 @@
     "publisher": "Appnotes",
     "url": "/",
     "image": "/assets/images/cover1.jpg",
-    "description": "Application Notes and Technical Articles."
+    "description": "Application Notes and Technical Articles"
 }
     </script>
 
@@ -95,7 +95,7 @@
     <div class="vertical">
         <div class="main-header-content inner">
             <h1 class="page-title">Appnotes</h1>
-            <h2 class="page-description">Application Notes and Technical Articles.</h2>
+            <h2 class="page-description">Application Notes and Technical Articles</h2>
         </div>
     </div>
     <a class="scroll-down icon-arrow-left" href="#content" data-offset="-45"><span class="hidden">Scroll Down</span></a>
@@ -218,5 +218,24 @@
 	    ga('send', 'pageview');
 
      </script>
+    <!-- Begin Jekyll SEO tag v1.3.2 -->
+<title>Appnotes - Appnotes</title>
+<meta property="og:title" content="Appnotes" />
+<meta name="description" content="Application Notes and Technical Articles" />
+<meta property="og:description" content="Application Notes and Technical Articles" />
+<link rel="canonical" href="http://appnotes.tk///" />
+<meta property="og:url" content="http://appnotes.tk///" />
+<meta property="og:site_name" content="Appnotes" />
+<script type="application/ld+json">
+  {
+    "@context": "http://schema.org",
+    "@type": "WebSite",
+    "name": "Appnotes",
+    "headline": "Appnotes",
+    "description": "Application Notes and Technical Articles",
+    "url": "http://appnotes.tk///"
+  }
+</script>
+<!-- End Jekyll SEO tag -->
 </body>
 </html>
