--- a/_posts/cookiepolicy.html
+++ b/_posts/cookiepolicy.html
@@ -2,6 +2,8 @@
 layout: page
 title: "Cookies Policy"
 permalink: cookiepolicy.html
+logo: 'assets/images/appnotes.png'
+cover: 'assets/images/cover3.jpg'
 ---
 
 <!doctype html>
